<resources>
    <string name="app_name">ASHA HealthMon</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_health_mon_login">HealthMonLoginActivity</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="txtLogin">Login</string>
    <string-array name="language">
        <item>Select Language</item>
        <item>Marathi</item>
        <item>Hindi</item>
        <item>English</item>
    </string-array>
    <string name="txtRememberMe">Remember Me</string>
    <string name="txtOK">OK</string>
    <string name="txtForgotPassword">Forgot Password?</string>
    <string name="msgLoginErrorInvalidCredential">Invalid Username or Password</string>
    <string name="txtPatientRegistration">Register Patient</string>
    <string name="txtAllPatients">All Patients</string>
    <string name="txtMyTasks">My Tasks</string>
    <string name="txtEducation">Education</string>
    <string name="txtCollaborationForum">Collaboration Forum</string>
    <string name="txtReports">Reports</string>
    <string name="txtHelpSupport">Help &amp; Support</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="txtDashboard">Dashboard</string>
    <string name="txtduetasks">Due Tasks</string>
    <string name="txtupcomingtasks">UpComing Tasks</string>
    <string name="txthelpguide">Help Guide</string>
    <string name="txtcallsupport">Call Support</string>
    <string name="txttasks">Tasks</string>
    <string name="txthaemoglobin">Haemoglobin</string>
    <string name="txtbloodpressure">Blood Pressure</string>
    <string name="txtimmunization">Immunization</string>
    <string name="txtbloodglucose">Blood Glucose</string>
    <string name="txttemperature">Temperature</string>
    <string name="txtpulseocimeter">Pulse Oximeter</string>
    <string name="txturineprotein">Urine Protein</string>
    <string name="txtecg">ECG</string>
    <string name="txtfetalmonitor">Fetal Monitor</string>
    <string name="txtCollaboration">Collaboration</string>
    <string name="txtMyActivities">My Activities</string>
    <string name="hinttasksearch">  Search by Name, ID</string>
    <string name="txtFavourites">Favourites</string>
    <string name="txtAllContacts">All Contacts</string>
    <string name="txtPatientInfo">Patient info</string>
    <string name="txtAddress">Address</string>
    <string name="txtFamilyInfo">Family info</string>
    <string name="txtPreview">Preview</string>
    <string name="txtBasicInfo">Basic Info</string>
    <string name="txtProgramInfo">Program Info</string>
    <string name="txtAsteriskMark">*</string>
    <string name="txtDataLoss">Your data is not saved, Do you want to continue? </string>
    <string name="txtCancel">Cancel</string>
    <string name="msgPatientRegisteredSuccessfully">Patient Registered Successfully</string>
    <string name="txtGotoPatientCard">Go to Patient Card</string>
    <string name="txtBasicInformation">Basic Information</string>
    <string name="txtMandatoryFields"> * Mandatory Fields</string>
    <string name="txtTitle">Title</string>
    <string name="txtFirstName">First Name</string>
    <string name="txtMiddleName">Middle Name</string>
    <string name="txtLastName">Last Name</string>
    <string name="txtGender">Gender</string>
    <string name="txtFemale">Female</string>
    <string name="txtMale">Male</string>
    <string name="txtDateofBirth">Date of Birth</string>
    <string name="txtAge">Age</string>
    <string name="txtPlaceofBirth">Place of Birth</string>
    <string name="txtMaritalStatus">Marital Status</string>
    <string name="txtCategory">Category</string>
    <string name="txtBPL">BPL</string>
    <string name="txtLanguage">Language</string>
    <string name="txtLiterate">Literate</string>
    <string name="txtIlliterate">Illiterate</string>
    <string name="txtIdCardType">Id Card Type</string>
    <string name="txtIdCardNumber">Id Card Number</string>
    <string name="txtContact">Mobile no</string>
    <string name="txtSaveProceed">Save &amp; proceed</string>
    <string name="txtCapture">Capture</string>
    <string name="txtRationCard">Ration Card</string>
    <string-array name="salutation">
        <item>Mrs</item>
        <item>Mr</item>
        <item>Miss</item>
    </string-array>
    <string-array name="marritalStatus">
        <item>Married</item>
        <item>Unmarried</item>
        <item>Divorced</item>
        <item>Separated</item>
    </string-array>
    <string-array name="category">
        <item>SC</item>
        <item>ST</item>
        <item>OBC</item>
        <item>General</item>
    </string-array>
    <string-array name="idCardType">
        <item>Aadhar Card</item>
        <item>Voter ID</item>
        <item>Pan Card</item>
        <item>Ration Card</item>
    </string-array>
    <string name="txtAadharCard">Aadhar Card</string>
    <string name="txtVoterID">Voter ID</string>
    <string name="txtPanCard">Pan Card</string>
    <string name="txtAddressLine1">Address Line 1</string>
    <string name="txtAddressLine2">Address Line 2</string>
    <string name="txtDistrict">District</string>
    <string name="txtTaluka">Taluka</string>
    <string name="txtVillage">Village</string>
    <string name="txtWard">Ward</string>
    <string name="txtPincode">Pincode</string>
    <string name="txtEmergencyContact">Emergency Contact</string>
    <string name="SaveProceedtoProgramInfo">Save &amp; proceed to Program Info</string>
    <string name="txtProgramInformation">Program Information</string>
    <string name="txtSelectProgram">Select Program</string>
    <string name="txtFirstPregnancy">First Pregnancy</string>
    <string name="txtYes">Yes</string>
    <string name="txtNo">No</string>
    <string name="txtLMPDate">LMP Date</string>
    <string name="txtEDD">EDD</string>
    <string name="txtNotes">Notes</string>
    <string name="txtGravida">Gravida</string>
    <string name="txtParity">Parity</string>
    <string name="txtPastAbortions">Past Abortions</string>
    <string name="txtPastStillBirths">Past Still Births</string>
    <string name="txtLivingChildren">Living Children</string>
    <string name="txtSpacingBetweenChildren">Spacing Between Children</string>
    <string name="txtNatureofPreviousDelivery">Nature of Previous Delivery</string>
    <string name="txtPreviousDeliveryDate">Previous Delivery Date</string>
    <string name="txtSaveProceedtoFamilyInfo">Save &amp; Proceed to Family Info</string>
    <string name="msgErrorCheckPrgParams">Please check All pregnancy Parameters</string>
    <string name="txtCesarean">Cesarean</string>
    <string name="txtForceps">Forceps</string>
    <string name="txtVacuum">Vacuum</string>
    <string-array name="programs">
        <item>Ante Natal Care (ANC)</item>
        <item>Post Natal Care (PNC)</item>
        <item>Family Planning</item>
        <item>Child Health</item>
    </string-array>
    <string-array name="DeliveryNature">
        <item>Normal</item>
        <item>Cesarean</item>
        <item>Forceps</item>
        <item>Vacuum</item>
    </string-array>
    <string-array name="district">
        <item>Haveli</item>
        <item>Khed</item>
        <item>Junar</item>
        <item>Daund</item>
    </string-array>
    <string-array name="taluka">
        <item>Valhe</item>
        <item>Indapur</item>
        <item>Bhor</item>
        <item>Shirur</item>
    </string-array>
    <string-array name="villageId">
        <item>Ambegaon</item>
        <item>Bhor</item>
        <item>Talegaon</item>
        <item>Daund</item>
    </string-array>
    <string-array name="pincode">
        <item>400100</item>
        <item>400101</item>
        <item>400111</item>
        <item>400121</item>
    </string-array>
    <string name="txtSaveProceedtoPreview">Save &amp; Proceed to Preview</string>
    <string name="txtFamilyInformation">Family Information</string>
    <string name="txtName">Name</string>
    <string name="txtRelation">Relation</string>
    <string name="txtAadharNo">Aadhar No</string>
    <string name="txtEdit">Edit</string>
    <string name="txtDelete">Delete</string>
    <string name="txtFullName">Full Name</string>
    <string name="txtRelationtoPatient">Relation to Patient</string>
    <string name="txtAdd">Add</string>
    <string name="txtSave">Save</string>
    <string name="txtClear">Clear</string>
    <string name="txtSkip">Skip</string>
    <string name="txtFamilyMemberAlreadyExsist">Family Member Already Exist</string>
    <string-array name="relation">
        <item>Husband</item>
        <item>Mother</item>
        <item>Father</item>
        <item>Mother-in-law</item>
        <item>Father-in-law</item>
        <item>Brother</item>
        <item>Sister</item>
        <item>Daughter</item>
        <item>Son</item>
    </string-array>
    <string name="txtAgeGender">Age/Gender</string>
    <string name="txtProgram">Program</string>
    <string name="txtRegistreringPatient">Registering Patient</string>
    <string name="new_message_notification_placeholder_text_template">You said %1$s and lorem ipsum
        dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel
        semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>
    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="valCategory">General</string>
    <string name="keyBPL">BPL:</string>
    <string name="valBPL">NO</string>
    <string name="keyLanguage">Language:</string>
    <string name="valLanguage">Marathi</string>
    <string name="keyEducation">Education:</string>
    <string name="valEducation">illeterate</string>
    <string name="keyAadharNo">Aadhar No:</string>
    <string name="valAadharNo">123456789</string>
    <string name="keyRationCNo">Ration Card No:</string>
    <string name="valRationCNo">Abc123456</string>
    <string name="keyContact">Contact:</string>
    <string name="valContact">9823829823</string>
    <string name="keyProgram">Program:</string>
    <string name="valProgram">MHO</string>
    <string name="keyLMPDate">LMP Date:</string>
    <string name="LMPDate">02/11/2015</string>
    <string name="keyEDD">EDD:</string>
    <string name="valEDD">24/07/2016</string>
    <string name="keyFstPrgncy">First Pregnancy:</string>
    <string name="valFstPrgncy">Yes</string>
    <string name="keyNotes">Notes:</string>
    <string name="valNotes">Lorem ipsum...</string>
    <string name="keyAddrLn1">Address Line 1:</string>
    <string name="valAddrLn1">Lorem ipsum..</string>
    <string name="keyAddrLn2">Address Line 2:</string>
    <string name="valAddrLn2">Lorem ipsum</string>
    <string name="keyDistrict">District:</string>
    <string name="valDistrict">Pune</string>
    <string name="keyTaluka">Taluka:</string>
    <string name="valTaluka">Pune</string>
    <string name="keyVillage">Village:</string>
    <string name="valVillage">Mahad</string>
    <string name="keyWard">Ward:</string>
    <string name="valWard">Lorem ipsum..</string>
    <string name="keyPin">PinCode:</string>
    <string name="txtOnlineTrainings">Online Trainings</string>
    <string name="txtInternalTrns">Internal Trainings</string>
    <string name="txtExternalTrns">External Trainings</string>
    <string name="txtDate">Date</string>
    <string name="txtSno">S. no.</string>
    <string name="txtBeneficiaryPatient">Beneficiary/Patient</string>
    <string name="txtWeeksDuringRegistration">Weeks during Registration</string>
    <string name="txtDeliveryNumber">Delivery Number</string>
</resources>